src/test/deca/context/valid/une_instruction.deca
// Description :
// test d'une instruction
//
// Résultats :
// ok

{
  println("Hello, world!");
}
